[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/Camera.gd" type="Script" id=1]
[ext_resource path="res://src/ObjectList.gd" type="Script" id=2]
[ext_resource path="res://src/Debug.gd" type="Script" id=3]
[ext_resource path="res://src/Sandbox.gd" type="Script" id=4]
[ext_resource path="res://grid_tile.png" type="Texture" id=5]
[ext_resource path="res://src/Options.gd" type="Script" id=6]
[ext_resource path="res://assets/props/House.obj" type="ArrayMesh" id=7]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 5 )
uv1_triplanar = true

[sub_resource type="PlaneMesh" id=2]
material = SubResource( 1 )
size = Vector2( 100, 100 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( 500, 0, 50, -500, 0, 50, 500, 0, -50, -500, 0, 50, -500, 0, -50, 500, 0, -50 )

[sub_resource type="ProceduralSky" id=4]
ground_bottom_color = Color( 0.839216, 0.917647, 0.980392, 1 )
ground_horizon_color = Color( 0.839216, 0.917647, 0.980392, 1 )

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 4 )
ambient_light_color = Color( 0.839216, 0.917647, 0.980392, 1 )
ambient_light_energy = 0.34
fog_enabled = true
fog_color = Color( 0.839216, 0.917647, 0.980392, 1 )
fog_depth_end = 30.0

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 0.992157, 0.984314, 0.984314, 0.278431 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[sub_resource type="SpatialMaterial" id=8]

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.352941, 0.419608, 0.529412, 1 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.811765, 0.811765, 0.811765, 1 )

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.184314, 0.184314, 0.184314, 1 )

[node name="Sandbox" type="Spatial"]
script = ExtResource( 4 )

[node name="Ground" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Ground"]

[node name="CollisionShape" type="CollisionShape" parent="Ground/StaticBody"]
shape = SubResource( 3 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.92768, -0.373376, 0, 0.373376, 0.92768, 0, 0, 0 )

[node name="Camera" type="Camera" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 4.36102, 8.24388 )
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="Pivot/Camera"]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.964667, -0.231664, 0.125499, -0.00935746, 0.445901, 0.895033, -0.263308, -0.864583, 0.427978, 0, 4.31068, 0 )
light_energy = 0.35

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="Options" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="PanelContainer" parent="Options"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -205.0
margin_bottom = 100.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Options/Debug"]
margin_left = 7.0
margin_top = 7.0
margin_right = 198.0
margin_bottom = 93.0

[node name="FPS" type="Label" parent="Options/Debug/VBoxContainer"]
margin_right = 191.0
margin_bottom = 14.0
text = "FPS: 60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawCalls" type="Label" parent="Options/Debug/VBoxContainer"]
margin_top = 18.0
margin_right = 191.0
margin_bottom = 32.0
text = "DrawCalls: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeProcess" type="Label" parent="Options/Debug/VBoxContainer"]
margin_top = 36.0
margin_right = 191.0
margin_bottom = 50.0
text = "TimeProcess: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimePhysicsProcess" type="Label" parent="Options/Debug/VBoxContainer"]
margin_top = 54.0
margin_right = 191.0
margin_bottom = 68.0
text = "TimePhysicsProcess"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridTile" type="Label" parent="Options/Debug/VBoxContainer"]
margin_top = 72.0
margin_right = 191.0
margin_bottom = 86.0
text = "GridTile: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="PanelContainer" parent="Options"]
margin_right = 165.0
margin_bottom = 236.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Options/UI"]
margin_left = 7.0
margin_top = 7.0
margin_right = 160.0
margin_bottom = 229.0

[node name="SnapButton" type="CheckButton" parent="Options/UI/VBoxContainer"]
margin_right = 153.0
margin_bottom = 40.0
pressed = true
text = "Snap"

[node name="SnapSizeLabel" type="Label" parent="Options/UI/VBoxContainer"]
margin_top = 44.0
margin_right = 153.0
margin_bottom = 58.0
text = "Snap size"

[node name="SnapSize" type="SpinBox" parent="Options/UI/VBoxContainer"]
margin_top = 62.0
margin_right = 153.0
margin_bottom = 86.0
min_value = 0.1
step = 0.1
value = 1.0

[node name="DebugButton" type="CheckButton" parent="Options/UI/VBoxContainer"]
margin_top = 90.0
margin_right = 153.0
margin_bottom = 130.0
text = "Debug"

[node name="PropsButton" type="CheckButton" parent="Options/UI/VBoxContainer"]
margin_top = 134.0
margin_right = 153.0
margin_bottom = 174.0
pressed = true
text = "Show props"

[node name="ObjectList" type="OptionButton" parent="Options/UI/VBoxContainer"]
margin_top = 178.0
margin_right = 153.0
margin_bottom = 198.0
text = "Item 0"
script = ExtResource( 2 )

[node name="CreateObjectButton" type="Button" parent="Options/UI/VBoxContainer"]
margin_top = 202.0
margin_right = 153.0
margin_bottom = 222.0
text = "Create"

[node name="Props" type="Spatial" parent="."]

[node name="House" type="MeshInstance" parent="Props"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -11, 0, 0 )
mesh = ExtResource( 7 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null
material/11 = null
material/12 = null
material/13 = null
material/14 = null
material/15 = null
material/16 = null
material/17 = SubResource( 6 )
material/18 = SubResource( 7 )
material/19 = SubResource( 6 )
material/20 = null
material/21 = null
material/22 = null
material/23 = null
material/24 = null
material/25 = null
material/26 = SubResource( 8 )
material/27 = null
material/28 = SubResource( 9 )
material/29 = SubResource( 10 )
material/30 = null
material/31 = SubResource( 11 )
material/32 = SubResource( 6 )
material/33 = SubResource( 7 )
material/34 = null
material/35 = null
material/36 = null
material/37 = null
material/38 = null
material/39 = null
material/40 = null
[connection signal="toggled" from="Options/UI/VBoxContainer/SnapButton" to="Options" method="_on_SnapButton_toggled"]
[connection signal="value_changed" from="Options/UI/VBoxContainer/SnapSize" to="Options" method="_on_SnapSize_value_changed"]
[connection signal="toggled" from="Options/UI/VBoxContainer/DebugButton" to="Options" method="_on_DebugButton_toggled"]
[connection signal="pressed" from="Options/UI/VBoxContainer/PropsButton" to="." method="_on_PropsButton_pressed"]
[connection signal="pressed" from="Options/UI/VBoxContainer/CreateObjectButton" to="." method="_on_CreateObjectButton_pressed"]
